--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12 text-center">
-								<h1 class="wp1">Introducing, Synthetica. A blissful HTML5/CSS3 Template, free forever.</h1>
+								<h1 class="wp1">Introducing VR Move. A blissful escape from Simulator Sickness, free forever.</h1>
 								<a href="#intro" class="btn primary wp2">Learn more</a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 hero-intro-text wp3">
-								<p>Synthetica is a <span class="bold italic">FREE</span>, HTML5/CSS3 template available for download exclusively via Codrops. </p>
+								<p>The use of <span class="bold italic">haptic feedback</span> for the reduction of simulator sickness. </p>
 							</div>
 						</div>
 					</div>
@@ -154,10 +154,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
-					<h4>The collective</h4>
+					<h4>The problem</h4>
 				</div>
 				<div class="col-md-9">
-					<p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress, banjo normcore trust fund hella. Kinfolk gluten-free lo-fi quinoa. Pabst kitsch ennui hoodie meggings banjo. Schlitz tacos kitsch godard before they sold out. Kale chips chillwave kickstarter photo booth cronut cold-pressed. Banjo fixie umami kombucha affogato gluten-free authentic slow-carb hashtag, hammock pour-over chambray viral VHS normcore.</p>
+					<p>VR has seen a surge in popularity in recent years, yet the same simulator sickness that has plagued VR since its inception, remains a problem today. A major contributing factor behind simulator sickness is vection - vection is best descrived as a feeling of self motion. We aim to reduce vection by the use of haptic feedback.</p>
 					<div class="video-player">
 						<video id="video_synth" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="568" height="300" poster="img/video-cover.jpg" data-setup='{}'>
 							<source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4" />
