--- a/index.html
+++ b/index.html
@@ -402,16 +402,14 @@
 					</article>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="crew-member" style="background-image: url(img/crew-blaz-robar.jpg)">
+					<article class="crew-member" style="background-image: url(img/brandonPic.png)">
 						<figure>
 							<figcaption class="overlay">
-								<h2>Blaz Robar</h2>
-								<p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress.</p>
+								<h2>Brandon Gower-Winter</h2>
+								<p>Developed the envrionment and helped with controller implementation.</p>
 								<div class="crew-socials">
 									<ul>
-										<li><a href="#"><i class="fa fa-twitter"></i></a>
-										</li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a>
+										<li><a href="https://www.linkedin.com/in/brandongower-winter/"><i class="fa fa-linkedin"></i></a>
 										</li>
 									</ul>
 								</div>
