--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12 text-center">
-								<h1 class="wp1">Introducing VR Move. A blissful escape from Simulator Sickness, free forever.</h1>
+								<h1 class="wp1">Reducing Simulator Sickness in Virtual Reality with Haptic Feedback</h1>
 								<a href="#intro" class="btn primary wp2">Learn more</a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 hero-intro-text wp3">
-								<p>The use of <span class="bold italic">haptic feedback</span> for the reduction of simulator sickness. </p>
+								<p>Tackling an ever present problem in Virtual Reality.</p>
 							</div>
 						</div>
 					</div>
@@ -385,7 +385,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<article class="crew-member" style="background-image: url(img/mikhailPic.jpg)">
 						<figure>
 							<figcaption class="overlay">
@@ -401,7 +401,7 @@
 						</figure>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<article class="crew-member" style="background-image: url(img/brandonPic.png)">
 						<figure>
 							<figcaption class="overlay">
@@ -417,35 +417,15 @@
 						</figure>
 					</article>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="crew-member" style="background-image: url(img/crew-mary-lou.jpg)">
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<article class="crew-member" style="background-image: url(img/jethroPic.jpg)">
 						<figure>
 							<figcaption class="overlay">
-								<h2>Mary Lou</h2>
-								<p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress.</p>
+								<h2>Jethro Moller</h2>
+								<p>Developed tether and helped with environment.</p>
 								<div class="crew-socials">
 									<ul>
-										<li><a href="#"><i class="fa fa-twitter"></i></a>
-										</li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a>
-										</li>
-									</ul>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<article class="crew-member" style="background-image: url('img/crew-dude.jpg')">
-						<figure>
-							<figcaption class="overlay">
-								<h2>Kobe West</h2>
-								<p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress.</p>
-								<div class="crew-socials">
-									<ul>
-										<li><a href="#"><i class="fa fa-twitter"></i></a>
-										</li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a>
+										<li><a href="https://www.linkedin.com/in/jethro-m%C3%B6ller-7a4800124/"><i class="fa fa-linkedin"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -464,7 +444,7 @@
 				<div class="col-md-12 wp4">
 					<h2>Final Papers</h2>
 					<a href="docs/AMDMIK002_Final.pdf" class="btn secondary-white">Mikhail's</a>
-					<a href="http://tympanus.net/codrops/?p=26570" class="btn secondary-white">Jethro's</a>
+					<a href="docs/VRMoveFinalPaperMLLJET002.pdf" class="btn secondary-white">Jethro's</a>
 					<a href="docs/GWRBRA001 VRMOVE FINAL REPORT.pdf" class="btn secondary-white">Brandon's</a>
 				</div>
 			</div>
@@ -472,7 +452,7 @@
 				<div class="col-md-12 wp4">
 					<h2>Literature Reviews</h2>
 					<a href="docs/LitReview_AMDMIK002.pdf" class="btn secondary-white">Mikhail's</a>
-					<a href="http://tympanus.net/codrops/?p=26570" class="btn secondary-white">Jethro's</a>
+					<a href="docs/LitReview_MLLJET002.pdf" class="btn secondary-white">Jethro's</a>
 					<a href="docs/Brandon Lit Review.pdf" class="btn secondary-white">Brandon's</a>
 				</div>
 			</div>
