--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/PostSSQ_baw.png">
 							<div class="article-image" style="background-image: url(img/graphs/PostSSQ_baw.png)">
 							</div>
 							<figure>
@@ -269,7 +269,7 @@
 				</div>
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/SSQDelta_baw.png">
 							<div class="article-image" style="background-image: url(img/graphs/SSQDelta_baw.png)">
 							</div>
 							<figure>
@@ -285,7 +285,7 @@
 				</div>
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/SUS_mean.png">
 							<div class="article-image" style="background-image: url(img/graphs/SUS_mean.png)">
 							</div>
 							<figure>
@@ -302,7 +302,7 @@
 			<div class="row has-top-margin">
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/HR_mean.png">
 							<div class="article-image" style="background-image: url(img/graphs/HR_mean.png)">
 							</div>
 							<figure>
@@ -318,7 +318,7 @@
 				</div>
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/RR_mean.png">
 							<div class="article-image" style="background-image: url(img/graphs/RR_mean.png)">
 							</div>
 							<figure>
@@ -334,7 +334,7 @@
 				</div>
 				<div class="col-md-4">
 					<article class="article-post">
-						<a href="#">
+						<a href="img/graphs/SCL_mean.png">
 							<div class="article-image" style="background-image: url(img/graphs/SCL_mean.png)">
 							</div>
 							<figure>
@@ -443,17 +443,17 @@
 			<div class="row">
 				<div class="col-md-12 wp4">
 					<h2>Final Papers</h2>
-					<a href="docs/AMDMIK002_Final.pdf" class="btn secondary-white">Mikhail's</a>
-					<a href="docs/VRMoveFinalPaperMLLJET002.pdf" class="btn secondary-white">Jethro's</a>
-					<a href="docs/GWRBRA001 VRMOVE FINAL REPORT.pdf" class="btn secondary-white">Brandon's</a>
+					<a href="docs/AMDMIK002_Final.pdf" class="btn secondary-white">Mikhail</a>
+					<a href="docs/VRMoveFinalPaperMLLJET002.pdf" class="btn secondary-white">Jethro</a>
+					<a href="docs/GWRBRA001 VRMOVE FINAL REPORT.pdf" class="btn secondary-white">Brandon</a>
 				</div>
 			</div>
 			<div class="row has-top-margin">
 				<div class="col-md-12 wp4">
 					<h2>Literature Reviews</h2>
-					<a href="docs/LitReview_AMDMIK002.pdf" class="btn secondary-white">Mikhail's</a>
-					<a href="docs/LitReview_MLLJET002.pdf" class="btn secondary-white">Jethro's</a>
-					<a href="docs/Brandon Lit Review.pdf" class="btn secondary-white">Brandon's</a>
+					<a href="docs/LitReview_AMDMIK002.pdf" class="btn secondary-white">Mikhail</a>
+					<a href="docs/LitReview_MLLJET002.pdf" class="btn secondary-white">Jethro</a>
+					<a href="docs/Brandon Lit Review.pdf" class="btn secondary-white">Brandon</a>
 				</div>
 			</div>
 			<div class="row has-top-margin">
